--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100 text-gray-900">
 <head>
@@ -6,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Review Settings – TidyZenic Admin</title>
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Chart.js for analytics -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- App scripts -->
   <script defer src="/admin/js/load-sidebar.js"></script>
   <script defer src="/admin/js/reviews.js"></script>
 </head>
 <body class="h-full font-sans bg-gray-100 flex flex-col">
+
+  <!-- Mobile Header -->
   <header class="md:hidden sticky top-0 z-40 bg-white shadow-sm p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <button id="menuToggle" class="text-gray-700 focus:outline-none">
@@ -22,35 +27,41 @@
     </div>
   </header>
 
+  <!-- Main Layout -->
   <div class="flex flex-1">
     <div id="sidebar-container"></div>
     <main class="flex-1 p-6 md:p-10 overflow-y-auto">
       <div class="max-w-3xl mx-auto space-y-8">
+
         <h1 class="text-3xl font-bold text-indigo-700">Review Settings</h1>
+
         <div class="p-4 bg-indigo-50 border-l-4 border-indigo-500 text-sm text-indigo-800 rounded-xl">
           💡 <strong>AI Suggestion:</strong> Set the review delay to <strong>1–3 hours</strong> after service to boost engagement.
         </div>
 
-        <!-- Google Reviews -->
+        <!-- Google Reviews Section -->
         <section class="bg-white shadow rounded-2xl p-6 space-y-4">
           <div class="flex justify-between items-center">
             <h2 class="text-xl font-semibold text-gray-800">Google Reviews</h2>
-            <button id="openGoogleReviewModal" class="text-sm text-indigo-600 font-medium hover:underline">View Analytics →</button>
+            <button id="openGoogleReviewModal" class="text-sm text-indigo-600 font-medium hover:underline">View Details →</button>
           </div>
+
           <label for="googleReviewLink" class="block text-sm text-gray-600 mb-1">Google My Business Review Link</label>
           <input type="url" id="googleReviewLink" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 transition" placeholder="https://g.page/your-business" />
+
           <label class="inline-flex items-center space-x-3 mt-2">
             <input type="checkbox" id="enableGoogleReview" class="form-checkbox h-5 w-5 text-indigo-600" />
             <span class="text-sm text-gray-700">Enable Google Review Requests</span>
           </label>
         </section>
 
-        <!-- Internal Reviews -->
+        <!-- Internal Reviews Section -->
         <section class="bg-white shadow rounded-2xl p-6 space-y-4">
           <div class="flex justify-between items-center">
             <h2 class="text-xl font-semibold text-gray-800">Internal Reviews</h2>
             <button id="openInternalReviewModal" class="text-sm text-indigo-600 font-medium hover:underline">View Details →</button>
           </div>
+
           <label class="inline-flex items-center space-x-3">
             <input type="checkbox" id="enableInternalReview" class="form-checkbox h-5 w-5 text-indigo-600" />
             <span class="text-sm text-gray-700">Enable Internal Review System</span>
@@ -80,42 +91,125 @@
           </label>
         </section>
 
+        <!-- Save Button -->
         <div class="text-right">
           <button id="saveReviewSettings" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-3 rounded-lg shadow-sm transition">
             Save Settings
           </button>
         </div>
+
       </div>
     </main>
   </div>
 
-  <!-- Google Review Sent Analytics Modal -->
-  <div id="googleReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
-    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] max-w-3xl relative space-y-6">
-      <button id="closeGoogleReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
-      <h2 class="text-2xl font-bold text-gray-800">📈 Google Review Link Performance</h2>
-      <div class="overflow-x-auto">
-        <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-sm text-sm text-gray-800">
-          <thead class="bg-gray-100 text-sm font-semibold text-gray-600">
+ <!-- Google Review Modal – Showing Sent Analytics Instead of Ratings -->
+<div id="googleReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] max-w-3xl relative space-y-6">
+    <button id="closeGoogleReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+    <h2 class="text-2xl font-bold text-gray-800">📈 Google Review Link Performance</h2>
+
+    <!-- Table Analytics -->
+    <div class="overflow-x-auto">
+      <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-sm text-sm text-gray-800">
+        <thead class="bg-gray-100 text-sm font-semibold text-gray-600">
+          <tr>
+            <th class="px-4 py-3 text-left">Channel</th>
+            <th class="px-4 py-3 text-left">Sent</th>
+            <th class="px-4 py-3 text-left">Clicked</th>
+            <th class="px-4 py-3 text-left">Click Through Rate</th>
+          </tr>
+        </thead>
+        <tbody id="googleAnalyticsTableBody">
+          <!-- Filled dynamically via JS -->
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Optional Chart -->
+    <div>
+      <canvas id="googleCTRChart" class="w-full h-64 mt-6"></canvas>
+    </div>
+
+    <div class="text-right pt-4">
+      <button id="sendGoogleReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">
+        📬 Send Google Review Request
+      </button>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Internal Review Modal -->
+<div id="internalReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl shadow-2xl p-6 w-[95%] max-w-6xl max-h-[90vh] overflow-y-auto relative space-y-6">
+    <button id="closeInternalReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+    <h2 class="text-2xl font-bold text-gray-800">📊 Internal Review Analytics</h2>
+
+    <!-- Chart -->
+    <div>
+      <canvas id="internalChart" class="w-full h-72"></canvas>
+    </div>
+
+    <!-- Table of Reviews -->
+    <div class="mt-6">
+      <h3 class="text-lg font-semibold text-gray-700 mb-3">Recent Internal Reviews</h3>
+      <div class="overflow-auto rounded-lg shadow border border-gray-200">
+        <table class="min-w-full bg-white">
+          <thead class="bg-gray-50 text-left text-sm font-semibold text-gray-600">
             <tr>
-              <th class="px-4 py-3 text-left">Channel</th>
-              <th class="px-4 py-3 text-left">Sent</th>
-              <th class="px-4 py-3 text-left">Clicked</th>
-              <th class="px-4 py-3 text-left">Click Through Rate</th>
+              <th class="px-4 py-3">Client</th>
+              <th class="px-4 py-3">Service Provider</th>
+              <th class="px-4 py-3">Rating</th>
+              <th class="px-4 py-3">Review</th>
+              <th class="px-4 py-3">Date</th>
             </tr>
           </thead>
-          <tbody id="googleAnalyticsTableBody"></tbody>
+          <tbody id="internalReviewTableBody" class="text-sm text-gray-700">
+            <!-- Rows will be injected dynamically via JS -->
+          </tbody>
         </table>
       </div>
-      <div class="pt-6">
-        <canvas id="googleCTRChart" class="w-full h-64"></canvas>
+    </div>
+
+    <!-- Send Button -->
+    <div class="text-right pt-6">
+      <button id="sendInternalReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-md">
+        📨 Send Internal Review Request
+      </button>
+    </div>
+  </div>
+</div>
+
+
+  <!-- SMS Setup Modal -->
+  <div id="smsModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] sm:w-full max-w-sm relative space-y-6">
+      <button id="closeSmsModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+      <h2 class="text-lg font-semibold text-gray-800 text-center">Connect Twilio for SMS</h2>
+      <p class="text-sm text-gray-500 text-center">Enter your Twilio credentials to enable SMS review requests.</p>
+
+      <div class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioSid">Twilio SID</label>
+          <input type="text" id="twilioSid" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="ACXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioAuthToken">Auth Token</label>
+          <input type="text" id="twilioAuthToken" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="Your Auth Token" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioPhone">Twilio Phone Number</label>
+          <input type="text" id="twilioPhone" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="+1234567890" />
+        </div>
       </div>
-      <div class="text-right pt-4">
-        <button id="sendGoogleReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">
-          📬 Send Google Review Request
+
+      <div class="text-center pt-4">
+        <button id="saveTwilioSettings" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-2 rounded-md font-medium transition">
+          Save & Connect
         </button>
       </div>
     </div>
   </div>
+
 </body>
 </html>
